--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "firebase": "^3.9.0",
     "homedir": "^0.6.0",
     "immutable": "^3.8.1",
+    "lodash.throttle": "^4.1.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
